Issue #2019345 by johnv: Updated Workflow classes to show Workflow Form also on Node View page.
Issue #2019345 by johnv: Fixed some issues in workflow.module file when using WorkflowField submodule.
Issue #2019345 by johnv: Changed workflow_field submodule to support Workflow Form on Node view page.
Issue #2019345 by johnv: Moved Node specific function workflow_forms() from workflow.module to workflow.node.inc.
Issue #2019345 by johnv: Fixed WorkflowItem did not save tab_roles properly on Field Settings page.
Issue #2019345 by johnv: Added some functions to the Workflow Entity classes.
Issue #2019345 by johnv: Changed calls to Workflow object in various includes.
Issue #2019345 by johnv: Added Workflow Field support in History tab page.
Issue #2019345 by johnv: Added new WorkflowTransition class.
Issue #2019345 by johnv: Moved Workflow Form processing code from workflow.module into new WorkflowTransition class.
Issue #2019345 by johnv: Replaced all functional calls to Workflow object by OOP Methods of Workflow class.
Issue #2019345 by johnv: Fixed wrong calls to Workflow::getFirstSid().
Issue #2102405 by johnv: Added basic Entity support for Workflow Field.
Issue #2102405 by johnv: Added Entity support for Workflow Scheduled Transitions.
Issue #2019345 by johnv: Fixed caching for WorkflowState:getStates.
Issue #2019345 by johnv: Changed workflow_node_view() to use Workflow classes.
Issue #2102405 by johnv: Fixed indices for Workflow Scheduled Transitions.
Issue #2019345 by johnv: Fixed order of States in Options list doesn't respect weight.
Issue #2019345 by johnv: Added 'property_info' to Workflow Field for Entity/ Rules support.
Issue #2019345 by johnv: Moved 'workflow_load' functon back to main module, since this is a menu callback.
Issue #2019345 by johnv: Added 'grouped' options for Workflow::getOptions().
Issue #2102663 by johnv: Added support for Workflow Field to workflow_rules sub-module.