@@ -426,91 +426,6 @@ function workflow_execute_transition($entity, $new_sid, $comment = NULL, $force 
 }
 
 /**
- * Get the states current user can move to for a given node.
- * @todo: deprecate workflow_field_choices() --> WorkflowState->getOptions()
- *
- * @param object $node
- *   The node to check.
- * @param boolean $force
- *   A switch to enable access to all states (e.g. for Rules)
- * @param State $state
- *   The predetermined state object (v7.x-1.3: new parameter for Workflow Field.)
- * @return
- *   Array of transitions.
- */
-function workflow_field_choices($node, $force = FALSE, $state = NULL) {
-  global $user;
-
-  static $cache = array(); // Node-specific cache per page load.
-  $sid = isset($state->sid) ? $state->sid : 0;
-  $nid = isset($node->nid) ? $node->nid : 0;
-  $choices = array();
-
-  if (!$node) {
-    // If no node is given, no result (e.g., on a Field settings page)
-    return $choices;
-  }
-
-  if ($nid && isset($cache[$nid][$force][$sid])) {
-    // Do not cache new nodes (for security reasons).
-    // @todo: add support for $entity_type.
-    $choices = $cache[$nid][$force][$sid];
-    return $choices;
-  }
-
-  if ($state) {
-    // This is used in Field API.
-    $workflow = Workflow::getWorkflow($state->wid);
-    $current_sid = $state->sid;
-  }
-  else {
-    // This is used in Node API.
-    $workflow = workflow_get_workflow_type_map_by_type($node->type);
-    $current_sid = workflow_node_current_state($node);
-  }
-
-  if ($workflow) {
-    $roles = array_keys($user->roles);
-
-    // If user is node author or this is a new page, give the authorship role.
-    if (($user->uid == $node->uid && $node->uid > 0) || (arg(0) == 'node' && arg(1) == 'add')) {
-      $roles += array('author' => 'author');
-    }
-    if ($user->uid == 1 || $force) {
-      // Superuser is special. And Force allows Rules to cause transition.
-      $roles = 'ALL';
-    }
-
-    // Workflow_allowable_transitions() does not return the entire transition row. Would like it to, but doesn't.
-    // Instead it returns just the allowable data as:
-    // [tid] => 1 [state_id] => 1 [state_name] => (creation) [state_weight] => -50
-    $transitions = workflow_allowable_transitions($current_sid, 'to', $roles);
-
-    // Include current state if it is not the (creation) state.
-    foreach ($transitions as $transition) {
-      if ($transition->sysid != WORKFLOW_CREATION && !$force) {
-        // Invoke a callback indicating that we are collecting state choices. Modules
-        // may veto a choice by returning FALSE. In this case, the choice is
-        // never presented to the user.
-        // @todo: for better performance, call a hook only once: can we find a way to pass all transitions at once
-        $result = module_invoke_all('workflow', 'transition permitted', $current_sid, $transition->state_id, $node, $field_name = '');
-        // Did anybody veto this choice?
-        if (!in_array(FALSE, $result)) {
-          // If not vetoed, add to list.
-          $choices[$transition->state_id] = check_plain(t($transition->state_name));
-        }
-      }
-    }
-
-    // Save to node-specific cache.
-    $cache[(int)$nid][$force][$sid] = $choices;
-  }
-
-  return $choices;
-}
-
-
-/**
  * Get an options list for workflow states (to show in a widget).
  * To be used in non-OO modules, like workflow_rules.
  *
@@ -1332,10 +1247,10 @@ function workflow_requirements($phase) {
  * @param $workflow
  *   the workflow object (might be derived from $sid).
  * @param $choices
- *   array with options, as determined in workflow_field_choices().
+ *   an array with $id => $label options, as determined in WorkflowState->getOptions().
  * 
  * @return
- *  Boolean, TRUE = a form must be shown; FALSE = a formatter must be shown.
+ *   Boolean, TRUE = a form must be shown; FALSE = no form, a formatter must be shown instead.
  */
 function workflow_show_form($sid, $workflow, $choices) {
   $count = count($choices);
@@ -1370,4 +1285,11 @@ function _workflow_get_sid_by_items($items) {
   // On a workflow form widget:
   $sid = isset($items[0]['workflow']['workflow_options']) ? $items[0]['workflow']['workflow_options'] : $sid;
   return $sid;
+}
+
+/**
+ * Helper function. Replacement for entity_id(), in case Entity module is not enabled.
+ */
+function _workflow_get_entity_id($entity_type, $entity) {
+ return $entity_id = ($entity_type == 'node') ? (isset($entity->nid) ? $entity->nid : 0) : entity_id($entity_type, $entity);	
 }
